--- a/custom_components/pihole_v6/translations/sv.json
+++ b/custom_components/pihole_v6/translations/sv.json
@@ -25,5 +25,17 @@
                 }
             }
         }
+    },
+    "services": {
+        "disable": {
+            "name": "Pausa",
+            "description": "Pausa Pi-Hole för en stund",
+            "fields": {
+                "duration": {
+                    "name": "Längd",
+                    "description": "Längden på pausen"
+                }
+            }
+        }
     }
 }
