--- a/custom_components/pihole_v6/translations/jp.json
+++ b/custom_components/pihole_v6/translations/jp.json
@@ -37,5 +37,18 @@
                 }
             }
         }
+    },
+    "entity": {
+        "sensor": {
+            "core": {
+                "name": "Pi-Hole core version"
+            },
+            "ftl": {
+                "name": "Pi-Hole ftl version"
+            },
+            "web": {
+                "name": "Pi-Hole web version"
+            }
+        }
     }
 }
