--- a/custom_components/pihole_v6/translations/en.json
+++ b/custom_components/pihole_v6/translations/en.json
@@ -49,26 +49,20 @@
             "web": {
                 "name": "Pi-Hole web version"
             },
-            "queries_total": {
-                "name": "Total queries"
-            },
-            "queries_blocked": {
-                "name": "Blocked queries"
-            },
-            "queries_unique_domains": {
-                "name": "Unique domains"
-            },
-            "queries_percent_blocked": {
-                "name": "Percentage of ads blocked"
-            },
-            "clients_active": {
+            "active_clients": {
                 "name": "Active clients"
             },
-            "clients_total": {
-                "name": "Total clients"
-            },
-            "gravity_domains_being_blocked": {
+            "gravity_size": {
                 "name": "Domains blocked by Gravity"
+            },
+            "queries_total": {
+                "name": "Queries made last 24 hours"
+            },
+            "queries_blocked": {
+                "name": "Queries blocked last 24 hours"
+            },
+            "queries_percent_blocked": {
+                "name": "Percentage of queries blocked"
             }
         }
     }
