--- a/custom_components/pihole_v6/translations/jp.json
+++ b/custom_components/pihole_v6/translations/jp.json
@@ -49,26 +49,20 @@
             "web": {
                 "name": "Pi-Hole web version"
             },
+            "active_clients": {
+                "name": "アクティブ顧客"
+            },
+            "gravity_size": {
+                "name": "グラビティでブロックされたドメイン"
+            },
             "queries_total": {
-                "name": "Total queries"
+                "name": "直近24時間のクエリー"
             },
             "queries_blocked": {
-                "name": "Blocked queries"
-            },
-            "queries_unique_domains": {
-                "name": "Unique domains"
+                "name": "過去24時間にブロックされたクエリー"
             },
             "queries_percent_blocked": {
-                "name": "Percentage of ads blocked"
-            },
-            "clients_active": {
-                "name": "Active clients"
-            },
-            "clients_total": {
-                "name": "Total clients"
-            },
-            "gravity_domains_being_blocked": {
-                "name": "Domains blocked by Gravity"
+                "name": "ブロックされたクエリの割合"
             }
         }
     }
