--- a/custom_components/pihole_v6/translations/sv.json
+++ b/custom_components/pihole_v6/translations/sv.json
@@ -49,26 +49,20 @@
             "web": {
                 "name": "Pi-Hole web version"
             },
+            "active_clients": {
+                "name": "Aktiva klienter"
+            },
+            "gravity_size": {
+                "name": "Domäner blockade av Gravity"
+            },
             "queries_total": {
-                "name": "Total queries"
+                "name": "Frågor gjorda senaste 24 timmarna"
             },
             "queries_blocked": {
-                "name": "Blocked queries"
-            },
-            "queries_unique_domains": {
-                "name": "Unique domains"
+                "name": "Frågor blockerade senaste 24 timmarna"
             },
             "queries_percent_blocked": {
-                "name": "Percentage of ads blocked"
-            },
-            "clients_active": {
-                "name": "Active clients"
-            },
-            "clients_total": {
-                "name": "Total clients"
-            },
-            "gravity_domains_being_blocked": {
-                "name": "Domains blocked by Gravity"
+                "name": "Procent av frågor blockerade"
             }
         }
     }
