Added translation for system health, updates to coordinator and statistic sensors

--- a/custom_components/pihole_v6/translations/en.json
+++ b/custom_components/pihole_v6/translations/en.json
@@ -65,5 +65,10 @@
                 "name": "Percentage of queries blocked"
             }
         }
+    },
+    "system_health": {
+        "info": {
+            "can_reach_server": "Can reach Pi-Hole"
+        }
     }
 }
