--- a/custom_components/pihole_v6/translations/jp.json
+++ b/custom_components/pihole_v6/translations/jp.json
@@ -65,5 +65,10 @@
                 "name": "ブロックされたクエリの割合"
             }
         }
+    },
+    "system_health": {
+        "info": {
+            "can_reach_server": "パイホールまで到達可能"
+        }
     }
 }
