--- a/custom_components/pihole_v6/translations/sv.json
+++ b/custom_components/pihole_v6/translations/sv.json
@@ -65,5 +65,10 @@
                 "name": "Procent av frågor blockerade"
             }
         }
+    },
+    "system_health": {
+        "info": {
+            "can_reach_server": "Kan nå Pi-Hole"
+        }
     }
 }
